<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="superplayer_hardware_Acceleration">硬件加速</string>
    <string name="superplayer_mirror">镜像</string>
    <string name="superplayer_multi_speed_playback">多倍速播放</string>
    <string name="superplayer_brightness">亮度</string>
    <string name="superplayer_sound">声音</string>
    <string name="superplayer_sharpness">清晰度</string>
    <string name="superplayer_back_live">返回直播</string>
    <string name="superplayer_small_video_special_effects_editing">小视频-特效剪辑</string>
    <string name="superplayer_original_picture">原画</string>
    <string name="superplayer_test_video">测试视频</string>
    <string name="superplayer_screenshot_fail">截图失败</string>
    <string name="superplayer_float_play_fail">悬浮播放失败</string>
    <string name="superplayer_enter_setting_fail">进入设置页面失败,请手动开启悬浮窗权限</string>
    <string name="superplayer_vipwatch_endwatch_tip">试看结束，VIP会员可观看完整视频</string>
    <string name="superplayer_vipwatch_open_vip_tip">开通VIP会员</string>
    <string name="superplayer_vipwatch_retry_tip">重新试看</string>
    <string name="superplayer_current_quality">当前清晰度：</string>
    <string name="superplayer_view_cache_list">查看缓存列表</string>
    <string name="superplayer_start_download">开始下载视频%1$s</string>
    <string name="superplayer_download_failed">下载视频%1$s失败</string>
    <string name="superplayer_download_quality_invalid">视频不存在该清晰度，下载失败，请尝试更换清晰度下载</string>
    <string name="superplayer_resolution_name">%1$s (%2$dp)</string>
    <string name="superplayer_flu">流畅</string>
    <string name="superplayer_sd">标清</string>
    <string name="superplayer_hd">高清</string>
    <string name="superplayer_fsd">全标清</string>
    <string name="superplayer_fhd2">超清</string>
    <string name="superplayer_2k">2K</string>
    <string name="superplayer_4k">4K</string>
    <string name="superplayer_danmu">弹幕</string>
    <string name="superplayer_replay">重播</string>
    <string name="superplayer_subtitle">字幕</string>
    <string name="superplayer_audio_tracks">音轨</string>
    <string name="superplayer_off">关闭</string>
    <string name="superplayer_audio_track">音轨 </string>
    <string name="superplayer_playforward">快进</string>
    <string name="superplayer_playbackward">快退</string>

    <string name="superplayer_weak_net_tip">检测到您的网络较差，建议切换清晰度</string>
    <string name="superplayer_switch_high_quality_failed">切换高清清晰度失败，请稍候重试</string>
    <string name="superplayer_switching_high_quality">正在为您切换为高清清晰度，请稍候&#8230;</string>

    <string name="common_toast_camera_permission_failed">相机权限获取失败。</string>
    <string name="common_toast_qr_code_error">二维码有误。</string>
    <string name="btn_forbit">禁止</string>
    <string name="permission_always_allow">始终允许</string>
    <string name="permission_introduction_title">存储权限申请说明</string>
    <string name="permission_introduction_positive">允许授权</string>
    <string name="permission_introduction_write">用于存储SDK配置文件、日志文件和媒体文件，读取本地媒体文件</string>
    <string name="permission_introduction_camera">用于采集摄像头画面，拍摄照片和录制视频</string>
    <string name="permission_introduction_audio">用于采集用户声音，录制声音</string>
    <string name="permission_introduction_write_title">存储权限</string>
    <string name="permission_introduction_camera_title">相机权限</string>
    <string name="permission_introduction_audio_title">麦克风权限</string>
</resources>
